[package]
name = "slack_update"
version = "0.1.3"
edition = "2021"
description = "simple app to set Slack status, emoji and photo"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
clap = { version = "4.3.12", features = ["derive"] }
